<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Backup</string>
    <string name="backup_service_started">Backup service started</string>
    <string name="backup_service_stopped">Backup service stopped</string>
    <string name="backup_service_label">Backup Service</string>
    <string name="backup_service_connected">Backup service connected</string>
    <string name="backup_service_disconnected">Backup service disconnected</string>
    <string name="backup_start_backup">Start Backup</string>
    <string name="backup_stop_backup">Stop Backup</string>
    <string name="backup_settings">Settings</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="domain">Domain</string>
    <string name="backup_to_directory">Backup to Directory (i.e. smb://server/path)</string>

</resources>